--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL=http://localhost:5000
+# // .env.production or .env.local for Vercel
+REACT_APP_BACKEND_URL=https://go-hunger.vercel.app
