--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 # // .env.production or .env.local for Vercel
-REACT_APP_BACKEND_URL=https://go-hunger.vercel.app
+REACT_APP_BACKEND_URL=https://gohunger-backend.onrender.com
+
